tests/Rules/Forms/Fixtures/invalid/textarea_no_label.html.twig
{# 1 errors #}
<textarea></textarea>
